2012-08-02  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c: Use debug_rtl_slim instead of
	print_rtl_slim.

	* lra.c: Ditto.  Use LAST_INSN_CODE instead of CODE_FOR_nothing.

2012-07-05  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (extract_loc_address_regs): Process LO_SUM.
	Remove assert.
	(process_address): Try LO_SUM.

	* config/rs6000/rs6000.c (legitimate_lo_sum_address_p): Permit
	some toc references for LRA.

2012-07-04  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-eliminations.c (get_elimination): Change prototype.
	(lra_eliminate_regs_1, eliminate_regs_in_insn): Transfer reg
	instead of regno to get_elimination.
	(lra_eliminate_reg_if_possible): Ditto.

2012-07-03  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-eliminations.c (lra_eliminate_regs_1): Use Pmode for
	plus_constant calls.
	(eliminate_regs_in_insn): Ditto.

2012-06-29  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (get_op_class): Don't process SUBREG.
	(check_and_process_move): Simplify the code.

2012-06-28  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (inherit_in_ebb): Implement restoring argument
	pseudo value from the call result.

2012-06-25  Vladimir Makarov  <vmakarov@redhat.com>

	* output.h (alter_subreg): Add new argument.

	* sdbout.c (sdbout_symbol): Pass new argument to alter_subreg.

	* dbxout.c (dbxout_symbol_location): Ditto.

	* final.c (final_scan_insn, cleanup_subreg_operands): Ditto.
	(walk_alter_subreg, output_operand): Ditto.
	(alter_subreg): Add new argument.

	* emit-rtl.c (gen_rtx_REG): Add lra_in_progress.

	* config/rs6000/rs6000.c (rs6000_legitimate_offset_address_p):
	Always pass true to legitimate_constant_pool_address_p when
	lra_in_progress.
	(rs6000_legitimate_address_p): Ditto.

	* lra-int.h (lra_update_operator_dups): New.

	* lra.c (lra): Put lra_in_progress after
	lra_hard_reg_substitution.

	* lra-spills.c (lra_hard_reg_substitution): Pass new argument to